# chicken_esolang

./: Cargo.toml  LICENSE  README.md
examples/: reverse.md
examples/custom/: reverse.chn
examples/legacy/: deadfish.md
js_interpreter/: demystified.js  demystified.js.txt
src/: lib.rs  main.rs
utils/: convert.py
