[package]
name = "chicken_esolang"
version = "0.1.0"
authors = ["Alexander Michaud email@alexandermichaud.tech"]
description = "An interpreter for the esolang Chicken"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest = "0.18.2"
