[package]
name = "chicken_esolang"
version = "0.1.2"
authors = ["Alexander Michaud email@alexandermichaud.tech"]
description = "An interpreter for the esolang Chicken"
edition = "2021"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest = "0.18.2"
